--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,11 +14,6 @@
 		</activity>
 		
 		<activity android:name="EditItemActivity"
-		 android:label="@string/edit_item">
-			<intent-filter>
-				<action android:name="info.bpace.caffeine.action.NEW_ITEM" />
-				<category android:name="android.intent.category.DEFAULT" />
-			</intent-filter>
-		</activity>
+		 android:label="@string/edit_item" />
 	</application>
 </manifest> 
