Added ViewItem activity, layout file, and some logical glue in the main activity for it to work when selecting items.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,5 +15,8 @@
 		
 		<activity android:name="EditItemActivity"
 		 android:label="@string/edit_item" />
+		
+		<activity android:name="ViewItemActivity"
+		 android:label="@string/view_item" />
 	</application>
 </manifest> 
